tests/unit-fail/j037e.ref
Error: EIO10
Description: Type of lvalue not compatible with the effective type of the object being accessed.
Type: Undefined behavior.
See also: C11 sec. 6.5:7
  at main(j037e.c:8)
  at <file-scope>(<unknown>)
